Terminou o front de login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,1 +1,53 @@
-<h1>Página de login</h1>
+<html>
+    <head>
+        <title>Login</title>
+        <meta charset="utf-8">
+        <style>
+            *{
+                margin:0;
+                padding:0;
+            }
+            body{
+                background-color:blanchedalmond;
+            }
+            .form{
+                padding-top:10%;
+                width:400px;
+                text-align:center;
+                margin:auto;
+            }
+            .tela{
+                border:2px solid black;
+                margin:auto;
+            }
+            button{
+                background-color:whitesmoke;
+                padding: 5px 20px 5px 20px;
+            }
+        </style>
+    </head>
+    <body>
+        <form class="form">
+            <div class="tela">
+
+                <div class="topo">
+                    <img src="">
+                    <h1>Loge abaixo</h1>
+                    <p>Bem vindo novamente</p>
+                </div>
+
+                <div class="inputs">
+                    <label>Email </label>
+                    <input type="text" placeholder="email"><br><br>
+                    <label>Senha </label>
+                    <input type="password" placeholder="senha">
+                </div>
+
+                <div class="check">
+                    <label><input type="checkbox"> Quero ser lembado</label><br>
+                </div>
+                <button type="submit">Logar-se</button>
+            </div>
+        </form>
+    </body>
+</html>
